Reset bootstrap.css

--- a/public/bootstrap.css
+++ b/public/bootstrap.css
@@ -1,5 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Neucha|Cabin+Sketch&display=swap);body{background-image:url(0fd89b0dc03aa59baaa05366dabed025.png);background-position:50%;background-attachment:fixed;-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover}@font-face{font-family:Chawp;src:url(5c0dc1b486cccaf13d1569eec42cb35e.ttf)}#elmish-app{overflow:hidden}
-
+@import url(https://fonts.googleapis.com/css?family=Neucha|Cabin+Sketch&display=swap)
 /*!
  * Bootswatch v4.6.0
  * Homepage: https://bootswatch.com
