Add 'Historie' link
See https://github.com/woog-life/graphing

--- a/public/main.css
+++ b/public/main.css
@@ -16,3 +16,9 @@ body {
     font-family: "Chawp";
     src: url('chawp.ttf');
 }
+
+#water-history {
+    color: #fff;
+    text-decoration-line: none;
+    text-decoration-line: underline;
+}
